Fix jumping bug

--- a/src/components/Modal/ModalHeader/ModalHeader.module.scss
+++ b/src/components/Modal/ModalHeader/ModalHeader.module.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/typography";
+
 .container {
   display: flex;
   align-items: flex-start;
@@ -5,9 +7,7 @@
   margin-block-end: var(--spacing-large);
 
   .title {
-    font-family: var(--title-font-family);
-    font-size: var(--font-size-h2);
-    font-weight: var(--font-weight-bold);
+    @include font-title();
     color: var(--primary-text-color);
     flex-grow: 1;
     margin-block-start: var(--spacing-large);
