--- a/src/components/Modal/__stories__/Modal.stories.scss
+++ b/src/components/Modal/__stories__/Modal.stories.scss
@@ -41,10 +41,6 @@
       display: none;
     }
   }
-
-  &-editable-heading-example {
-    width: 420px;
-  }
 }
 
 .modal-content {
